@@ -144,6 +144,10 @@ BUGS
     su(1) to the account. See <http://bugs.debian.org/411997>. You must use
     standard login(1) to get the expected behavior.
 
+    Due to lack of available tools in POSIX shell, combining short options
+    is not supported; .e.g. -fi. All options must be give separately using
+    spaces like in -f -i.
+
 ENVIRONMENT
     None.
 
